--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "^2.3.4",
+    "emailjs": "^1.0.1",
     "express": "~4.13.1",
     "express-session": "^1.12.1",
     "express-validator": "^2.18.0",
     "mongoose": "^4.2.5",
     "morgan": "~1.6.1",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
+    "passwordless": "^1.1.0",
+    "passwordless-mongostore": "^0.1.3",
     "semantic-ui": "^2.1.6",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "validator": "^4.5.1"
   },
   "devDependencies": {
     "gulp": "^3.9.0"
