--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passwordless-mongostore": "^0.1.3",
     "semantic-ui": "^2.1.6",
     "serve-favicon": "~2.3.0",
+    "supertest": "^1.2.0",
     "validator": "^4.5.1"
   },
   "devDependencies": {
