--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,10 @@
 machine:
   node:
     version: 5.1.0
+  environment:
+    MONGOLAB_URI: mongodb://localhost:27017/coursify
+    SESSION_SECRET: dummy_secret
+    EMAIL_USERNAME: dummy_username
+    EMAIL_PASSWORD: dummy_password
+    EMAIL_HOST: smtp.gmail.com
+    HOST_NAME: localhost:3000
